deploy: f4a794d53c4ef2b22d1fd6cc539b82dfbab9372f

--- a/PeriodSet_8hpp.html
+++ b/PeriodSet_8hpp.html
@@ -79,7 +79,7 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1PeriodSet.html" class="m-doc">meos::PeriodSet</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Set of one or more <a href="classmeos_1_1Period.html" class="m-doc">Period</a> objects.</dd>
           </dl>
         </section>
       </div>
