--- a/Range_8hpp.html
+++ b/Range_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename T&gt;</div>
               class <a href="classmeos_1_1Range.html" class="m-doc">meos::Range</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Range of values with either inclusive or exlusive bounds.</dd>
           </dl>
         </section>
       </div>
