--- a/STBox_8hpp.html
+++ b/STBox_8hpp.html
@@ -79,7 +79,7 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1STBox.html" class="m-doc">meos::STBox</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Spatio-temporal box - bounding box with value and/or space/time dimensions.</dd>
           </dl>
         </section>
       </div>
