--- a/TBox_8hpp.html
+++ b/TBox_8hpp.html
@@ -79,7 +79,7 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1TBox.html" class="m-doc">meos::TBox</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Temporal box - bounding box with value and/or time dimensions.</dd>
           </dl>
         </section>
       </div>
