--- a/TInstantSet_8hpp.html
+++ b/TInstantSet_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1TInstantSet.html" class="m-doc">meos::TInstantSet</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Set of <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a> objects.</dd>
           </dl>
         </section>
       </div>
