--- a/TInstant_8hpp.html
+++ b/TInstant_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               class <a href="classmeos_1_1TInstant.html" class="m-doc">meos::TInstant</a>
             </dt>
-            <dd>Class for representing temporals of instant duration.</dd>
+            <dd>A value at a particular instant in time.</dd>
           </dl>
         </section>
       </div>
