--- a/TSequenceSet_8hpp.html
+++ b/TSequenceSet_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1TSequenceSet.html" class="m-doc">meos::TSequenceSet</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Set of <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a> objects.</dd>
           </dl>
         </section>
       </div>
