--- a/TSequence_8hpp.html
+++ b/TSequence_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1TSequence.html" class="m-doc">meos::TSequence</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Set of <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a> objects, with exclusive/inclusive bounds and <a href="namespacemeos.html#a1ce9fcf3a52a3d907df274e5680720f5" class="m-doc">Interpolation</a>.</dd>
           </dl>
         </section>
       </div>
