--- a/Temporal_8hpp.html
+++ b/Temporal_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1Temporal.html" class="m-doc">meos::Temporal</a>
             </dt>
-            <dd><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</dd>
+            <dd>Base for all the temporal types - <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>, <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a>, <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>, <a href="classmeos_1_1TSequenceSet.html" class="m-doc">TSequenceSet</a>.</dd>
           </dl>
         </section>
       </div>
