--- a/TimestampSet_8hpp.html
+++ b/TimestampSet_8hpp.html
@@ -79,7 +79,7 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1TimestampSet.html" class="m-doc">meos::TimestampSet</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Set of one or more <a href="namespacemeos.html#acafb45f4fa7ee1cc0d455cec341f8797" class="m-doc">time_<wbr />point</a> objects.</dd>
           </dl>
         </section>
       </div>
