--- a/classmeos_1_1Range.html
+++ b/classmeos_1_1Range.html
@@ -55,7 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename T&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>Range <span class="m-thin">class</span>
         </h1>
-        <p><span></span></p>
+        <p>Range of values with either inclusive or exlusive bounds.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
