--- a/classmeos_1_1TInstant.html
+++ b/classmeos_1_1TInstant.html
@@ -55,7 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>TInstant <span class="m-thin">class</span>
         </h1>
-        <p>Class for representing temporals of instant duration.</p>
+        <p>A value at a particular instant in time.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -71,7 +71,6 @@ Docs</span></a>
             </li>
           </ul>
         </div>
-<p>A temporal instant represents a value at a particular instant in time.</p>
         <section id="base-classes">
           <h2><a href="#base-classes">Base classes</a></h2>
           <dl class="m-doc">
@@ -79,7 +78,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1Temporal.html" class="m-doc">Temporal&lt;BaseType&gt;</a>
             </dt>
-            <dd><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</dd>
+            <dd>Base for all the temporal types - <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>, <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a>, <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>, <a href="classmeos_1_1TSequenceSet.html" class="m-doc">TSequenceSet</a>.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename TemporalType&gt;</div>
               struct <a href="structmeos_1_1TemporalComparators.html" class="m-doc">TemporalComparators&lt;TInstant&lt;BaseType&gt;&gt;</a>
