--- a/classmeos_1_1TInstantSet.html
+++ b/classmeos_1_1TInstantSet.html
@@ -55,7 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>TInstantSet <span class="m-thin">class</span>
         </h1>
-        <p><span></span></p>
+        <p>Set of <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a> objects.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -77,7 +77,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet&lt;float&gt;</a>
             </dt>
-            <dd><a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a> is the base class for <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a> and <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>.</dd>
+            <dd>Base class for <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a> and <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
