--- a/classmeos_1_1Temporal.html
+++ b/classmeos_1_1Temporal.html
@@ -55,7 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>Temporal <span class="m-thin">class</span>
         </h1>
-        <p><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</p>
+        <p>Base for all the temporal types - <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>, <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a>, <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>, <a href="classmeos_1_1TSequenceSet.html" class="m-doc">TSequenceSet</a>.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -78,7 +78,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               class <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>
             </dt>
-            <dd>Class for representing temporals of instant duration.</dd>
+            <dd>A value at a particular instant in time.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
