--- a/classmeos_1_1TimestampSet.html
+++ b/classmeos_1_1TimestampSet.html
@@ -54,7 +54,7 @@ Docs</span></a>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>TimestampSet <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="TimestampSet_8hpp.html">&lt;meos/types/time/TimestampSet.hpp&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Set of one or more <a href="namespacemeos.html#acafb45f4fa7ee1cc0d455cec341f8797" class="m-doc">time_<wbr />point</a> objects.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
