--- a/structmeos_1_1SRIDMembers.html
+++ b/structmeos_1_1SRIDMembers.html
@@ -75,7 +75,7 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1STBox.html" class="m-doc">STBox</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Spatio-temporal box - bounding box with value and/or space/time dimensions.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
