--- a/GeomPoint_8hpp.html
+++ b/GeomPoint_8hpp.html
@@ -79,17 +79,12 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1GeomPoint.html" class="m-doc">meos::GeomPoint</a>
             </dt>
-            <dd></dd>
+            <dd>A point in space.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1is__geometry.html" class="m-doc">meos::is_geometry</a>
             </dt>
             <dd>Helps find out if a base type is geometry or not.</dd>
-            <dt>
-              <div class="m-doc-template">template&lt;&gt;</div>
-              struct <a href="structmeos_1_1is__geometry_3_01GeomPoint_01_4.html" class="m-doc">meos::is_geometry&lt;GeomPoint&gt;</a>
-            </dt>
-            <dd><span></span></dd>
           </dl>
         </section>
       </div>
