--- a/Period_8hpp.html
+++ b/Period_8hpp.html
@@ -79,7 +79,7 @@ Docs</span></a>
             <dt>
               class <a href="classmeos_1_1Period.html" class="m-doc">meos::Period</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Time interval with either inclusive or exlusive bounds.</dd>
           </dl>
         </section>
       </div>
