--- a/classmeos_1_1GeomPoint.html
+++ b/classmeos_1_1GeomPoint.html
@@ -54,6 +54,7 @@ Docs</span></a>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>GeomPoint <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="GeomPoint_8hpp.html">&lt;meos/types/geom/GeomPoint.hpp&gt;</a></div>
         </h1>
+        <p>A point in space.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
