--- a/classmeos_1_1PeriodSet.html
+++ b/classmeos_1_1PeriodSet.html
@@ -54,7 +54,7 @@ Docs</span></a>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>PeriodSet <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="PeriodSet_8hpp.html">&lt;meos/types/time/PeriodSet.hpp&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Set of one or more <a href="classmeos_1_1Period.html" class="m-doc">Period</a> objects.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
