--- a/classmeos_1_1STBox.html
+++ b/classmeos_1_1STBox.html
@@ -54,7 +54,7 @@ Docs</span></a>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>STBox <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="STBox_8hpp.html">&lt;meos/types/box/STBox.hpp&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Spatio-temporal box - bounding box with value and/or space/time dimensions.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
