--- a/classmeos_1_1TSequenceSet.html
+++ b/classmeos_1_1TSequenceSet.html
@@ -55,7 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>TSequenceSet <span class="m-thin">class</span>
         </h1>
-        <p><span></span></p>
+        <p>Set of <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a> objects.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -77,7 +77,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1Temporal.html" class="m-doc">Temporal&lt;float&gt;</a>
             </dt>
-            <dd><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</dd>
+            <dd>Base for all the temporal types - <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>, <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a>, <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>, <a href="classmeos_1_1TSequenceSet.html" class="m-doc">TSequenceSet</a>.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename TemporalType&gt;</div>
               struct <a href="structmeos_1_1TemporalComparators.html" class="m-doc">TemporalComparators&lt;TSequenceSet&lt;float&gt;&gt;</a>
@@ -152,30 +152,30 @@ Docs</span></a>
               <span class="m-doc-wrap-bumper">auto <a href="#a1c3718ed3918d9e05b676c27fcef2c51" class="m-doc-self">interpolation</a>(</span><span class="m-doc-wrap">) const -&gt; <a href="namespacemeos.html#a1ce9fcf3a52a3d907df274e5680720f5" class="m-doc">Interpolation</a></span>
             </dt>
             <dd><span></span></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#ab3d9208f38083a82ab184e575bdd4aab" class="m-doc">sequences</a>(</span><span class="m-doc-wrap">) const -&gt; std::set&lt;<a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;&gt;</span>
+            <dt id="ab3d9208f38083a82ab184e575bdd4aab">
+              <span class="m-doc-wrap-bumper">auto <a href="#ab3d9208f38083a82ab184e575bdd4aab" class="m-doc-self">sequences</a>(</span><span class="m-doc-wrap">) const -&gt; std::set&lt;<a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;&gt;</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a68b37ef8ca883f917246120164c9fbe9" class="m-doc">numSequences</a>(</span><span class="m-doc-wrap">) const -&gt; size_t</span>
+            <dd>Set of sequences.</dd>
+            <dt id="a68b37ef8ca883f917246120164c9fbe9">
+              <span class="m-doc-wrap-bumper">auto <a href="#a68b37ef8ca883f917246120164c9fbe9" class="m-doc-self">numSequences</a>(</span><span class="m-doc-wrap">) const -&gt; size_t</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a1710f933e328d7fd53974716464eb93d" class="m-doc">startSequence</a>(</span><span class="m-doc-wrap">) const -&gt; <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;</span>
+            <dd>Number of distinct sequences.</dd>
+            <dt id="a1710f933e328d7fd53974716464eb93d">
+              <span class="m-doc-wrap-bumper">auto <a href="#a1710f933e328d7fd53974716464eb93d" class="m-doc-self">startSequence</a>(</span><span class="m-doc-wrap">) const -&gt; <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a0120aa66b42fe61d01f0ddfed1bca33d" class="m-doc">endSequence</a>(</span><span class="m-doc-wrap">) const -&gt; <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;</span>
+            <dd>Start sequence.</dd>
+            <dt id="a0120aa66b42fe61d01f0ddfed1bca33d">
+              <span class="m-doc-wrap-bumper">auto <a href="#a0120aa66b42fe61d01f0ddfed1bca33d" class="m-doc-self">endSequence</a>(</span><span class="m-doc-wrap">) const -&gt; <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#ab43119c26f3b60f2bc4e785b7f64a07a" class="m-doc">sequenceN</a>(</span><span class="m-doc-wrap">size_t n) const -&gt; <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;</span>
+            <dd>End sequence.</dd>
+            <dt id="ab43119c26f3b60f2bc4e785b7f64a07a">
+              <span class="m-doc-wrap-bumper">auto <a href="#ab43119c26f3b60f2bc4e785b7f64a07a" class="m-doc-self">sequenceN</a>(</span><span class="m-doc-wrap">size_t n) const -&gt; <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a622b826843679acdd80163e43361dba2" class="m-doc">instants</a>(</span><span class="m-doc-wrap">) const -&gt; std::set&lt;<a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>&lt;BaseType&gt;&gt;</span>
+            <dd>N-th distinct sequence.</dd>
+            <dt id="a622b826843679acdd80163e43361dba2">
+              <span class="m-doc-wrap-bumper">auto <a href="#a622b826843679acdd80163e43361dba2" class="m-doc-self">instants</a>(</span><span class="m-doc-wrap">) const -&gt; std::set&lt;<a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>&lt;BaseType&gt;&gt;</span>
             </dt>
-            <dd></dd>
+            <dd>Set of instants.</dd>
             <dt id="a1178b75781fa5011fe28c83dc1c1145f">
               <span class="m-doc-wrap-bumper">auto <a href="#a1178b75781fa5011fe28c83dc1c1145f" class="m-doc-self">timespan</a>(</span><span class="m-doc-wrap">) const -&gt; <a href="namespacemeos.html#a53a5f0fdb503d0ab6cb248871a8ce956" class="m-doc">duration_<wbr />ms</a> <span class="m-label m-flat m-warning">override</span></span>
             </dt>
@@ -236,63 +236,6 @@ Docs</span></a>
             </dt>
             <dd><span></span></dd>
           </dl>
-        </section>
-        <section>
-          <h2>Function documentation</h2>
-          <section class="m-doc-details" id="ab3d9208f38083a82ab184e575bdd4aab"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">std::set&lt;<a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt;&gt; meos::<wbr />TSequenceSet&lt;BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#ab3d9208f38083a82ab184e575bdd4aab" class="m-doc-self">sequences</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Set of sequences.</p>
-          </div></section>
-          <section class="m-doc-details" id="a68b37ef8ca883f917246120164c9fbe9"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">size_t meos::<wbr />TSequenceSet&lt;BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a68b37ef8ca883f917246120164c9fbe9" class="m-doc-self">numSequences</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Number of distinct sequences.</p>
-          </div></section>
-          <section class="m-doc-details" id="a1710f933e328d7fd53974716464eb93d"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper"><a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt; meos::<wbr />TSequenceSet&lt;BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a1710f933e328d7fd53974716464eb93d" class="m-doc-self">startSequence</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Start sequence.</p>
-          </div></section>
-          <section class="m-doc-details" id="a0120aa66b42fe61d01f0ddfed1bca33d"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper"><a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt; meos::<wbr />TSequenceSet&lt;BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a0120aa66b42fe61d01f0ddfed1bca33d" class="m-doc-self">endSequence</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>End sequence.</p>
-          </div></section>
-          <section class="m-doc-details" id="ab43119c26f3b60f2bc4e785b7f64a07a"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper"><a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>&lt;BaseType&gt; meos::<wbr />TSequenceSet&lt;BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#ab43119c26f3b60f2bc4e785b7f64a07a" class="m-doc-self">sequenceN</a>(</span><span class="m-doc-wrap">size_t n) const</span></span>
-            </h3>
-<p>N-th distinct sequence.</p>
-          </div></section>
-          <section class="m-doc-details" id="a622b826843679acdd80163e43361dba2"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">std::set&lt;<a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>&lt;BaseType&gt;&gt; meos::<wbr />TSequenceSet&lt;BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a622b826843679acdd80163e43361dba2" class="m-doc-self">instants</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Set of instants.</p>
-          </div></section>
         </section>
       </div>
     </div>
