deploy: 5b62d34cf30f9d6a7636640b5b90131083804da3

--- a/classmeos_1_1GeomPoint.html
+++ b/classmeos_1_1GeomPoint.html
@@ -114,28 +114,46 @@ Docs</span></a>
               <span class="m-doc-wrap-bumper">void <a href="#a7dccf2516db40f3fcf819482662a703e" class="m-doc-self">operator=</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1GeomPoint.html" class="m-doc">GeomPoint</a> const&amp; g)</span>
             </dt>
             <dd><span></span></dd>
+            <dt id="a13088ef206620a832c45fbb9034601c4">
+              <span class="m-doc-wrap-bumper">void <a href="#a13088ef206620a832c45fbb9034601c4" class="m-doc-self">fromEWKB</a>(</span><span class="m-doc-wrap">std::istream&amp; is)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a8394cd4e89f2265d9bdc55ce86d20fb9">
+              <span class="m-doc-wrap-bumper">void <a href="#a8394cd4e89f2265d9bdc55ce86d20fb9" class="m-doc-self">toEWKB</a>(</span><span class="m-doc-wrap">std::ostream&amp; os) const</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="ae0bcb2cb99a75465d12cd2aa37e0b2c0">
+              <span class="m-doc-wrap-bumper">void <a href="#ae0bcb2cb99a75465d12cd2aa37e0b2c0" class="m-doc-self">fromEWKT</a>(</span><span class="m-doc-wrap">std::string wkt)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a24c340cbdab4334a68f1f22c5b9680b4">
+              <span class="m-doc-wrap-bumper">auto <a href="#a24c340cbdab4334a68f1f22c5b9680b4" class="m-doc-self">toEWKT</a>(</span><span class="m-doc-wrap">) const -&gt; std::string</span>
+            </dt>
+            <dd><span></span></dd>
             <dt id="abebeccdca2dcb42be35c2de52e13f516">
               <span class="m-doc-wrap-bumper">void <a href="#abebeccdca2dcb42be35c2de52e13f516" class="m-doc-self">fromWKB</a>(</span><span class="m-doc-wrap">std::istream&amp; is)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a1d0aec379a1c4eee9e90234dd7dea351">
-              <span class="m-doc-wrap-bumper">void <a href="#a1d0aec379a1c4eee9e90234dd7dea351" class="m-doc-self">toWKB</a>(</span><span class="m-doc-wrap">std::ostream&amp; os) const</span>
+            <dt id="a346ea9c72f39a6597d1ac035308cdded">
+              <span class="m-doc-wrap-bumper">void <a href="#a346ea9c72f39a6597d1ac035308cdded" class="m-doc-self">toWKB</a>(</span><span class="m-doc-wrap">std::ostream&amp; os,
+              bool extended = true) const</span>
             </dt>
             <dd><span></span></dd>
             <dt id="a29dace0da6274428ead7fd472110ce6c">
               <span class="m-doc-wrap-bumper">void <a href="#a29dace0da6274428ead7fd472110ce6c" class="m-doc-self">fromWKT</a>(</span><span class="m-doc-wrap">std::string wkt)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="ac43c95e02993de9bdbb915ff468bcbe9">
-              <span class="m-doc-wrap-bumper">auto <a href="#ac43c95e02993de9bdbb915ff468bcbe9" class="m-doc-self">toWKT</a>(</span><span class="m-doc-wrap">) const -&gt; std::string</span>
+            <dt id="a4ea2ef82bbe3b06dbc9d443c13f2f612">
+              <span class="m-doc-wrap-bumper">auto <a href="#a4ea2ef82bbe3b06dbc9d443c13f2f612" class="m-doc-self">toWKT</a>(</span><span class="m-doc-wrap">bool extended = true) const -&gt; std::string</span>
             </dt>
             <dd><span></span></dd>
             <dt id="a836e8f3f4d8ae2fedb99f2d909113ddb">
               <span class="m-doc-wrap-bumper">void <a href="#a836e8f3f4d8ae2fedb99f2d909113ddb" class="m-doc-self">fromHEX</a>(</span><span class="m-doc-wrap">std::istream&amp; is)</span>
             </dt>
             <dd><span></span></dd>
-            <dt id="a9551cad143494c68bd24db1b4580a5cf">
-              <span class="m-doc-wrap-bumper">void <a href="#a9551cad143494c68bd24db1b4580a5cf" class="m-doc-self">toHEX</a>(</span><span class="m-doc-wrap">std::ostream&amp; os) const</span>
+            <dt id="a95eb325fba2356aa1c3dde806b4d0367">
+              <span class="m-doc-wrap-bumper">void <a href="#a95eb325fba2356aa1c3dde806b4d0367" class="m-doc-self">toHEX</a>(</span><span class="m-doc-wrap">std::ostream&amp; os,
+              bool extended = true) const</span>
             </dt>
             <dd><span></span></dd>
             <dt id="a7ef31a8c0f5dc0f5c401edf6f7d53a65">
