deploy: 072b17159f664b49b0d165bec9b5a44fe23df696

--- a/classmeos_1_1Range.html
+++ b/classmeos_1_1Range.html
@@ -72,11 +72,19 @@ Docs</span></a>
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
+            <dt id="a716f9f8ae133193e755d2597b06cfaf7">
+              <span class="m-doc-wrap-bumper"><a href="#a716f9f8ae133193e755d2597b06cfaf7" class="m-doc-self">Range</a>(</span><span class="m-doc-wrap">)</span>
+            </dt>
+            <dd><span></span></dd>
             <dt id="a783eedc22b8d3c3e829c3c73fac9b0a4">
               <span class="m-doc-wrap-bumper"><a href="#a783eedc22b8d3c3e829c3c73fac9b0a4" class="m-doc-self">Range</a>(</span><span class="m-doc-wrap">T const&amp; lower,
               T const&amp; upper,
               bool const lower_inc = true,
               bool const upper_inc = false)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a70e202ede77c550497ab5071c30eda67">
+              <span class="m-doc-wrap-bumper"><a href="#a70e202ede77c550497ab5071c30eda67" class="m-doc-self">Range</a>(</span><span class="m-doc-wrap">std::string const&amp; serialized)</span>
             </dt>
             <dd><span></span></dd>
             <dt id="a6ab974c10f0a69d885bfe5f25096613c">
@@ -157,6 +165,11 @@ Docs</span></a>
             <dt id="abba7c502d9589d892b68dcb5164379ea">
               <span class="m-doc-wrap-bumper">auto <a href="#abba7c502d9589d892b68dcb5164379ea" class="m-doc-self">operator&lt;=</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;T&gt; const&amp; lhs,
               <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;T&gt; const&amp; rhs) -&gt; bool</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="aa124967ee2f4b36639512d287268bad8">
+              <span class="m-doc-wrap-bumper">auto <a href="#aa124967ee2f4b36639512d287268bad8" class="m-doc-self">operator&gt;&gt;</a>(</span><span class="m-doc-wrap">std::istream&amp; in,
+              <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;T&gt;&amp; range) -&gt; std::istream&amp;</span>
             </dt>
             <dd><span></span></dd>
             <dt id="a88883906f7e797a4388712ec567a16aa">
