--- a/namespacemeos.html
+++ b/namespacemeos.html
@@ -210,6 +210,26 @@ Docs</span></a>
             </dt>
             <dd><span></span></dd>
             <dt>
+              using <a href="#a3e1a517b3e2ccf46743396ca832da1ca" class="m-doc">RangeBool</a> = <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;bool&gt;
+            </dt>
+            <dd><span></span></dd>
+            <dt>
+              using <a href="#a0e28195f506f0b5b4f07f8a5cc0eaaca" class="m-doc">RangeInt</a> = <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;int&gt;
+            </dt>
+            <dd><span></span></dd>
+            <dt>
+              using <a href="#ab8e6d56a61204b06aebaa260908260ab" class="m-doc">RangeFloat</a> = <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;float&gt;
+            </dt>
+            <dd><span></span></dd>
+            <dt>
+              using <a href="#a5b8e732eecb203f6fbf877cc2fdf1cbd" class="m-doc">RangeText</a> = <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;std::string&gt;
+            </dt>
+            <dd><span></span></dd>
+            <dt>
+              using <a href="#a43746b6ce55d5ecbb87b4c42be6ea193" class="m-doc">RangeGeomPoint</a> = <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;<a href="classmeos_1_1GeomPoint.html" class="m-doc">GeomPoint</a>&gt;
+            </dt>
+            <dd><span></span></dd>
+            <dt>
               using <a href="#a20fd3ef6c7e98f5fa0e2d2a980a7eccb" class="m-doc">Empty</a> = std::tuple
             </dt>
             <dd></dd>
@@ -474,6 +494,41 @@ Docs</span></a>
             <h3>
               typedef std::chrono::milliseconds meos::<wbr /><a href="#a53a5f0fdb503d0ab6cb248871a8ce956" class="m-doc-self">duration_ms</a>
               <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="utils_8hpp.html">&lt;meos/io/utils.hpp&gt;</a></div>
+            </h3>
+            <p><span></span></p>
+          </div></section>
+          <section class="m-doc-details" id="a3e1a517b3e2ccf46743396ca832da1ca"><div>
+            <h3>
+              typedef <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;bool&gt; meos::<wbr /><a href="#a3e1a517b3e2ccf46743396ca832da1ca" class="m-doc-self">RangeBool</a>
+              <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="Range_8hpp.html">&lt;meos/types/range/Range.hpp&gt;</a></div>
+            </h3>
+            <p><span></span></p>
+          </div></section>
+          <section class="m-doc-details" id="a0e28195f506f0b5b4f07f8a5cc0eaaca"><div>
+            <h3>
+              typedef <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;int&gt; meos::<wbr /><a href="#a0e28195f506f0b5b4f07f8a5cc0eaaca" class="m-doc-self">RangeInt</a>
+              <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="Range_8hpp.html">&lt;meos/types/range/Range.hpp&gt;</a></div>
+            </h3>
+            <p><span></span></p>
+          </div></section>
+          <section class="m-doc-details" id="ab8e6d56a61204b06aebaa260908260ab"><div>
+            <h3>
+              typedef <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;float&gt; meos::<wbr /><a href="#ab8e6d56a61204b06aebaa260908260ab" class="m-doc-self">RangeFloat</a>
+              <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="Range_8hpp.html">&lt;meos/types/range/Range.hpp&gt;</a></div>
+            </h3>
+            <p><span></span></p>
+          </div></section>
+          <section class="m-doc-details" id="a5b8e732eecb203f6fbf877cc2fdf1cbd"><div>
+            <h3>
+              typedef <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;std::string&gt; meos::<wbr /><a href="#a5b8e732eecb203f6fbf877cc2fdf1cbd" class="m-doc-self">RangeText</a>
+              <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="Range_8hpp.html">&lt;meos/types/range/Range.hpp&gt;</a></div>
+            </h3>
+            <p><span></span></p>
+          </div></section>
+          <section class="m-doc-details" id="a43746b6ce55d5ecbb87b4c42be6ea193"><div>
+            <h3>
+              typedef <a href="classmeos_1_1Range.html" class="m-doc">Range</a>&lt;<a href="classmeos_1_1GeomPoint.html" class="m-doc">GeomPoint</a>&gt; meos::<wbr /><a href="#a43746b6ce55d5ecbb87b4c42be6ea193" class="m-doc-self">RangeGeomPoint</a>
+              <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="Range_8hpp.html">&lt;meos/types/range/Range.hpp&gt;</a></div>
             </h3>
             <p><span></span></p>
           </div></section>
