deploy: 02ed34f5d70fe204f8cb68729472611f4d0e12a1

--- a/classmeos_1_1Range.html
+++ b/classmeos_1_1Range.html
@@ -132,6 +132,14 @@ Docs</span></a>
               <span class="m-doc-wrap-bumper">auto <a href="#a8cbfcae696bb83a4acc496c6264cbbf5" class="m-doc-self">contains</a>(</span><span class="m-doc-wrap">T const&amp; t) const -&gt; bool</span>
             </dt>
             <dd><span></span></dd>
+            <dt id="aaaaf9667c2e19471f64e3a18a65a5d54">
+              <span class="m-doc-wrap-bumper">auto <a href="#aaaaf9667c2e19471f64e3a18a65a5d54" class="m-doc-self">read</a>(</span><span class="m-doc-wrap">std::istream&amp; in) -&gt; std::istream&amp;</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="ab083a24b25f4658ef46a7b4f020ad3a7">
+              <span class="m-doc-wrap-bumper">auto <a href="#ab083a24b25f4658ef46a7b4f020ad3a7" class="m-doc-self">write</a>(</span><span class="m-doc-wrap">std::ostream&amp; os) const -&gt; std::ostream&amp;</span>
+            </dt>
+            <dd><span></span></dd>
           </dl>
         </section>
         <section id="friends">
