deploy: ce2dadb4c51d68dfd7c28d534990548d0072934a

--- a/classmeos_1_1Period.html
+++ b/classmeos_1_1Period.html
@@ -131,8 +131,16 @@ Docs</span></a>
               <span class="m-doc-wrap-bumper">auto <a href="#ab52d77de0dfecd4e093581e4b81f10ba" class="m-doc-self">overlap</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1Period.html" class="m-doc">Period</a> const&amp; period) const -&gt; bool</span>
             </dt>
             <dd><span></span></dd>
+            <dt id="ae771f949ac1bbc7b72c34902dc45457f">
+              <span class="m-doc-wrap-bumper">auto <a href="#ae771f949ac1bbc7b72c34902dc45457f" class="m-doc-self">contains</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1Period.html" class="m-doc">Period</a> const&amp; period) const -&gt; bool</span>
+            </dt>
+            <dd><span></span></dd>
             <dt id="a363a0a578cc13aeadf4c6a57aaaae0ed">
               <span class="m-doc-wrap-bumper">auto <a href="#a363a0a578cc13aeadf4c6a57aaaae0ed" class="m-doc-self">contains_timestamp</a>(</span><span class="m-doc-wrap"><a href="namespacemeos.html#acafb45f4fa7ee1cc0d455cec341f8797" class="m-doc">time_<wbr />point</a> const timestamp) const -&gt; bool</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a3ba4f9389b6adb2f3a4c874af946e718">
+              <span class="m-doc-wrap-bumper">auto <a href="#a3ba4f9389b6adb2f3a4c874af946e718" class="m-doc-self">intersection</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1Period.html" class="m-doc">Period</a> const&amp; period) const -&gt; <a href="classmeos_1_1Period.html" class="m-doc">Period</a></span>
             </dt>
             <dd><span></span></dd>
           </dl>
