--- a/classmeos_1_1TSequenceSet.html
+++ b/classmeos_1_1TSequenceSet.html
@@ -212,6 +212,10 @@ Docs</span></a>
               <span class="m-doc-wrap-bumper">auto <a href="#af8a0ea7010870fa334ed9cbd9a40a062" class="m-doc-self">intersectsPeriod</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1Period.html" class="m-doc">Period</a> const period) const -&gt; bool <span class="m-label m-flat m-warning">override</span></span>
             </dt>
             <dd>Does the temporal value intersect the period?</dd>
+            <dt id="ac1a6221f043ffde5217c4aef301c791c">
+              <span class="m-doc-wrap-bumper">auto <a href="#ac1a6221f043ffde5217c4aef301c791c" class="m-doc-self">atPeriod</a>(</span><span class="m-doc-wrap"><a href="classmeos_1_1Period.html" class="m-doc">Period</a> const&amp; period) const -&gt; <a href="classmeos_1_1TSequenceSet.html" class="m-doc">TSequenceSet</a>&lt;BaseType&gt;</span>
+            </dt>
+            <dd><span></span></dd>
             <dt id="a638e5f28ca080ad55fca4496f566c1a9">
               <span class="m-doc-wrap-bumper">auto <a href="#a638e5f28ca080ad55fca4496f566c1a9" class="m-doc-self">read</a>(</span><span class="m-doc-wrap">std::istream&amp; in) -&gt; std::istream&amp;</span>
             </dt>
